plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}" apply false
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'kh.edu.istad.stadoor'
    version = projectVersion

    repositories { 
        mavenCentral() 
    }

    // Workaround for IntelliJ sync issue in multi-module projects
    if (!tasks.names.contains("prepareKotlinBuildScriptModel")) {
        tasks.register("prepareKotlinBuildScriptModel") {}
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'


    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    // Toolchain
    java { toolchain { languageVersion = JavaLanguageVersion.of(25) } }

    dependencies {

        implementation 'org.springframework.boot:spring-boot-starter'
        implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
        implementation platform("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")


        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        implementation "org.mapstruct:mapstruct:${mapstructVersion}"
        annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
        annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }


    // Automatically disable executable packaging for domain/infrastructure libraries
    // (Only enable bootJar for runnable modules like -main, -server, or -bff)
    if (!(name =~ /-(main|server|bff)$/)) {
        bootJar { enabled = false }
        jar { enabled = true } 
    }

    // Ensure parameter name retention for Spring 6.1+
    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs.add("-parameters")
    }

    // Virtual Threads & Native Access support
    tasks.withType(JavaExec).configureEach {
        println "Configuring JVM args for task: ${path}"
        systemProperty 'spring.threads.virtual.enabled', 'true'
        jvmArgs += '--enable-native-access=ALL-UNNAMED'
    }

    test {
        useJUnitPlatform()
        jvmArgs += '--enable-native-access=ALL-UNNAMED'
    }
}
